short term fix for assembly menu on mobile
create a second menu inside the main one and hide it with css when wide
hide the top bar one with css when the screen is narrow

--- a/www/docs/style/sass/app.scss
+++ b/www/docs/style/sass/app.scss
@@ -325,9 +325,13 @@ form {
 }
 
 .primary-navigation-bar.assembly {
+    display: none;
     float: left;
     width: auto;
     position: relative;
+    @media ( min-width: $medium-screen ) {
+        display: block;
+    }
     .menu-dropdown {
         position: static;
         margin: 10px 0px 0px 12px;
@@ -475,6 +479,17 @@ form {
                         overflow: hidden;
                     }
                 }
+            }
+        }
+
+        .assembly-sub-menu {
+            border-top: 1px solid $borders;
+            display: block;
+            @media ( min-width: $medium-screen ) {
+                display: none;
+            }
+            ul {
+                @include unstyled-list;
             }
         }
     }
